# cmake-tutorial

./: .gitignore
hello-cpp/: CMakeLists.txt  README.md  hello.cpp  hello.hpp  main.cpp
hello-cpp-python/: CMakeLists.txt  README.md  requirements.txt  setup.py
hello-cpp-python/cpp/: hello.cpp
hello-cpp-python/hello/: __init__.py
hello-cpp/_build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  hello.vcxproj  hello.vcxproj.filters  main.vcxproj  main.vcxproj.filters  myproject.sln
